# ClawX.rs

./: .gitignore  README.ja-JP.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: bundle-openclaw.mjs
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  check_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: agents.rs  app.rs  channels.rs  cron.rs  files.rs  gateway.rs  hostapi.rs  logs.rs  mod.rs  nodejs.rs  oauth.rs  openclaw.rs  openclaw_version.rs  providers.rs  settings.rs  shell.rs  skills.rs  update.rs  usage.rs  uv.rs  window.rs
src-tauri/src/core/: logging.rs  mod.rs  state.rs
src-tauri/src/core/auth/: device_identity.rs  mod.rs  oauth.rs
src-tauri/src/core/channels/: config.rs  mod.rs  whatsapp.rs
src-tauri/src/core/config/: channels.rs  mod.rs  settings.rs
src-tauri/src/core/gateway/: manager.rs  mod.rs  process.rs  websocket.rs
src-tauri/src/core/providers/: mod.rs  registry.rs
src-tauri/src/core/skills/: config.rs  hub.rs  mod.rs
src-tauri/src/core/storage/: keyring.rs  mod.rs  providers.rs  secrets.rs  settings.rs
src-tauri/src/services/: menu.rs  mod.rs  tray.rs  updater.rs
src-tauri/src/services/providers/: api_keys.rs  mod.rs  service.rs
src/components/channels/: ChannelConfigModal.tsx
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/components/settings/: ProvidersSettings.tsx
src/lib/: api-client.ts  host-events.ts  provider-accounts.ts  tauri-api.ts  tauri-ipc-integration.ts
src/stores/: agents.ts  channels.ts  chat.ts  cron.ts  gateway.ts  providers.ts  settings.ts  skills.ts  update.ts
src/types/: cron.ts
tests/unit/: chat-history-actions.test.ts
(+21 files in other folders)
